// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
<div
  className="{}"
  id="default"
>
  <div
    className="markdown-body"
  />
</div>
`;

exports[`Render properties.content = table - value[0] 1`] = `
<div
  className="{}"
  id="properties.content = table"
>
  <div
    className="markdown-body"
  >
    <h3>
      Table
    </h3>
    <table>
      <thead>
        <tr>
          <th
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            A
          </th>
          <th
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            B
          </th>
          <th
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            C
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            one
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            two
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            three
          </td>
        </tr>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            123
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            345
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            34892
          </td>
        </tr>
        <tr>
          <td
            style={
              Object {
                "textAlign": "right",
              }
            }
          >
            true
          </td>
          <td
            style={
              Object {
                "textAlign": "center",
              }
            }
          >
            false
          </td>
          <td
            style={
              Object {
                "textAlign": "left",
              }
            }
          >
            none
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Render properties.content - value[0] 1`] = `
<div
  className="{}"
  id="properties.content"
>
  <div
    className="markdown-body"
  >
    <h1>
      One Heading
    </h1>
    <p>
      A paragraph with 
      <em>
        emphasis
      </em>
       and 
      <strong>
        strong importance
      </strong>
      .
    </p>
    <blockquote>
      <p>
        A block quote with 
        <del>
          strikethrough
        </del>
         and a URL: 
        <a
          href="https://reactjs.org"
        >
          https://reactjs.org
        </a>
        .
      </p>
    </blockquote>
    <h4>
      Link
    </h4>
    <p>
      <a
        href="https://lowdefy.com"
      >
        A link to Lowdefy
      </a>
    </p>
    <h1>
      Two
    </h1>
    <ul>
      <li>
        Lists
      </li>
      <li>
        <input
          checked={false}
          readOnly={true}
          type="checkbox"
        />
        todo
      </li>
      <li>
        <input
          checked={true}
          readOnly={true}
          type="checkbox"
        />
        done
      </li>
    </ul>
    <p>
      A table:
    </p>
    <table>
      <thead>
        <tr>
          <th>
            a
          </th>
          <th>
            b
          </th>
        </tr>
      </thead>
    </table>
  </div>
</div>
`;

exports[`Render properties.content DangerousHtml - value[0] 1`] = `
<div
  className="{}"
  id="properties.content DangerousHtml"
>
  <div
    className="markdown-body"
  >
    <h3>
      Link
    </h3>
    <p>
      &lt;a href="https://lowdefy.com"&gt;
      Lowdefy link
      &lt;/a&gt;
    </p>
    <p>
      &lt;font size="+10"&gt;
      Description
      &lt;/font&gt;
    </p>
    <h3>
      Bad HTML
    </h3>
    &lt;div onmouseover="alert('alpha')"&gt;
  &lt;a href="javascript:alert('bravo')"&gt;delta&lt;/a&gt;
  &lt;img src="x" onerror="alert('charlie')"&gt;
  &lt;iframe src="javascript:alert('delta')"&gt;&lt;/iframe&gt;
  &lt;math&gt;
    &lt;mi xlink:href="data:x,&lt;script&gt;alert('echo')&lt;/script&gt;"&gt;&lt;/mi&gt;
  &lt;/math&gt;
&lt;/div&gt;
&lt;script&gt;
  alert('script tag');
&lt;/script&gt;
  </div>
</div>
`;

exports[`Render properties.content with code - value[0] 1`] = `
<div
  className="{}"
  id="properties.content with code"
>
  <div
    className="markdown-body"
  >
    <h3>
      Code
    </h3>
    <p>
      Default
    </p>
    <pre
      style={
        Object {
          "background": "#f8f8f8",
          "color": "#333",
          "display": "block",
          "overflowX": "auto",
          "padding": "0.5em",
        }
      }
    >
      <code
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <span
          style={Object {}}
        >
            &lt;a 
        </span>
        <span
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          href
        </span>
        <span
          style={Object {}}
        >
          =
        </span>
        <span
          style={
            Object {
              "color": "#d14",
            }
          }
        >
          ""
        </span>
        <span
          style={Object {}}
        >
          &gt;Default style&lt;/a&gt;
        </span>
      </code>
    </pre>
    <p>
      Html
    </p>
    <pre
      style={
        Object {
          "background": "#f8f8f8",
          "color": "#333",
          "display": "block",
          "overflowX": "auto",
          "padding": "0.5em",
        }
      }
    >
      <code
        className="language-html"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          a
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          href
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          ""
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          html style
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          a
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          script
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
              alert(
        </span>
        <span
          className="xml javascript"
          style={
            Object {
              "color": "#d14",
            }
          }
        >
          'script tag'
        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
          );

        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          script
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
      </code>
    </pre>
    <p>
      Json
    </p>
    <pre
      style={
        Object {
          "background": "#f8f8f8",
          "color": "#333",
          "display": "block",
          "overflowX": "auto",
          "padding": "0.5em",
        }
      }
    >
      <code
        className="language-json"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <span
          style={Object {}}
        >
            {

        </span>
        <span
          style={Object {}}
        >
              
        </span>
        <span
          style={Object {}}
        >
          "obj"
        </span>
        <span
          style={Object {}}
        >
          : 
        </span>
        <span
          style={
            Object {
              "color": "#d14",
            }
          }
        >
          "one"
        </span>
        <span
          style={Object {}}
        >
          ,

        </span>
        <span
          style={Object {}}
        >
              
        </span>
        <span
          style={Object {}}
        >
          "list"
        </span>
        <span
          style={Object {}}
        >
          : [

        </span>
        <span
          style={Object {}}
        >
                
        </span>
        <span
          style={
            Object {
              "color": "#008080",
            }
          }
        >
          1
        </span>
        <span
          style={Object {}}
        >
          ,

        </span>
        <span
          style={Object {}}
        >
                
        </span>
        <span
          style={
            Object {
              "color": "#008080",
            }
          }
        >
          2
        </span>
        <span
          style={Object {}}
        >
          

        </span>
            ]

          }

      </code>
    </pre>
    <p>
      Bad HTML
    </p>
    <pre
      style={
        Object {
          "background": "#f8f8f8",
          "color": "#333",
          "display": "block",
          "overflowX": "auto",
          "padding": "0.5em",
        }
      }
    >
      <code
        className="language-html"
        style={
          Object {
            "whiteSpace": "pre",
          }
        }
      >
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          div
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          onmouseover
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "alert('alpha')"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          a
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          href
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "javascript:alert('bravo')"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          delta
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          a
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          img
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          src
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "x"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          onerror
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "alert('charlie')"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          iframe
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          src
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "javascript:alert('delta')"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          iframe
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          math
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
              
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          mi
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
           
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          xlink:href
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          =
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#d14",
              "fontWeight": "normal",
            }
          }
        >
          "data:x,&lt;script&gt;alert('echo')&lt;/script&gt;"
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          mi
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
            
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          math
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
          
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          div
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml"
          style={Object {}}
        >
          
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          script
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
          

        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
            alert(
        </span>
        <span
          className="xml javascript"
          style={
            Object {
              "color": "#d14",
            }
          }
        >
          'script tag'
        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
          );

        </span>
        <span
          className="xml javascript"
          style={Object {}}
        >
          
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &lt;/
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          script
        </span>
        <span
          className="xml"
          style={
            Object {
              "color": "#000080",
              "fontWeight": "normal",
            }
          }
        >
          &gt;
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`Render properties.html-iframe - value[0] 1`] = `
<div
  className="{}"
  id="properties.html-iframe"
>
  <div
    className="markdown-body"
  >
    <p>
      No additional ADD_TAGS:
    </p>
    &lt;iframe width="560" height="315" src="https://www.youtube.com/embed/7N7GWdlQJlU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen&gt;&lt;/iframe&gt;
  </div>
</div>
`;

exports[`Render properties.style and headings - value[0] 1`] = `
<div
  className="{\\"style\\":{\\"border\\":\\"1px solid blue\\"}}"
  id="properties.style and headings"
>
  <div
    className="markdown-body"
  >
    <h1>
      One
    </h1>
    <h2>
      Two
    </h2>
    <h3>
      Three
    </h3>
    <h4>
      Four
    </h4>
    <h5>
      Five
    </h5>
    <h6>
      Six
    </h6>
  </div>
</div>
`;

exports[`Test Schema default 1`] = `true`;

exports[`Test Schema default 2`] = `null`;

exports[`Test Schema properties.content = table 1`] = `true`;

exports[`Test Schema properties.content = table 2`] = `null`;

exports[`Test Schema properties.content 1`] = `true`;

exports[`Test Schema properties.content 2`] = `null`;

exports[`Test Schema properties.content DangerousHtml 1`] = `true`;

exports[`Test Schema properties.content DangerousHtml 2`] = `null`;

exports[`Test Schema properties.content with code 1`] = `true`;

exports[`Test Schema properties.content with code 2`] = `null`;

exports[`Test Schema properties.html-iframe 1`] = `true`;

exports[`Test Schema properties.html-iframe 2`] = `null`;

exports[`Test Schema properties.style and headings 1`] = `true`;

exports[`Test Schema properties.style and headings 2`] = `null`;
